--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,9 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - AdrienChampion
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - anzenlang/lean-smt
+  - anzenlang/timelib
+  - AdrienChampion/rsmt2
+  - AdrienChampion/lsmt2
+  - AdrienChampion/hashconsing
